name:                pledge
version:             0.1.0.0
synopsis:            OpenBSD's pledge(2) for Haskell
description:         Implement support for pledge(2) in OpenBSD
license:             BSD3
license-file:        LICENSE
author:              VARIK VALEFOR
maintainer:          varikvalefor@aol.com
copyright:           VARIK VALEFOR <varikvalefor@aol.com>
original-author:     Mr. OSSI HERRALA
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Pledge
  build-depends:       base >= 4.7
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
