name:                pledge-vvx
version:             0.1.0.1
synopsis:            Haskell implementation of OpenBSD's pledge(2)
description:         This package implements Haskell support for
                     OpenBSD's pledge(2).
                     .
                     pledge(2) is used to restrice programs'
                     functionality... in a desirable way.  A superior
                     description of pledge(2) is available at
                     http://man.openbsd.org/pledge.2.
license:             BSD3
license-file:        LICENSE
author:              VARIK VALEFOR
maintainer:          varikvalefor@aol.com
copyright:           (c) VARIK VALEFOR 2021
original-author:     Mr. OSSI HERRALA
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Pledge
  build-depends:       base >= 4.7,
                       filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
